--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <p>本网站仅供测试和学习使用，本人对您不正当的使用带来的一切问题不负任何责任</p>
         <style type="text/css">
     .myfont{
-        font-size:60px;
+        font-size:150px;
     }
     </style>
-    <a href="./平安成电智慧通行出.html" class=myfont>出校链接</a>
+    <a href="./平安成电智慧通行出.html" class=myfont>出校链接</a> </h1>
 
     <a href="./平安成电智慧通行入.html" class=myfont>入校链接</a>
 </body>
