--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         font-size:150px;
     }
     </style>
-    <a href="./平安成电智慧通行出.html" class=myfont>出校链接</a> </h1>
+    <a href="./平安成电智慧通行出.html" class=myfont>出校链接</a> 
 
     <a href="./平安成电智慧通行入.html" class=myfont>入校链接</a>
 </body>
